# appmana-comfyui-nodes-layerdiffuse

./: .gitignore  pyproject.toml  requirements.txt  setup.py
comfy_layered_diffusion/: layered_diffusion.py
comfy_layered_diffusion/lib_layerdiffusion/: attention_sharing.py  models.py  utils.py
