[project]
name = "comfyui-layerdiffuse"
version = "0.0.1"
name = "comfyui-layerdiffuse"
description = "Transparent Image Layer Diffusion using Latent Transparency"
version = "1.0.4"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]

[project.entry-points."comfyui.custom_nodes"]
comfy_layered_diffusion = "comfy_layered_diffusion"

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/huchenlei/ComfyUI-layerdiffuse"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "huchenlei"
DisplayName = "ComfyUI-layerdiffuse"
Icon = ""
